package Models;

public class Medicament {
}
